install aws cli

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,18 +11,13 @@ job1:
   before_script:
     - pip install rstvalidator
     - pip install pelican
+    - pip install --upgrade awscli
     - sed -i 's/lean-delivery.com/preview.lean-delivery.com/g' pelicanconf.py
   script:
     - for filename in content/articles/*.rst; do python -m rstvalidator "$filename"; done
     - for filename in content/pages/*.rst; do python -m rstvalidator "$filename"; done
-  after_script:
     - pelican -s publishconf.py
-  tags:
-    - aws
-
-job2:
-  stage: deploy
-  script:
+  after_script:
     - aws s3 cp output/* s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
   tags:
     - aws
