fixed default root objects

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,6 @@ job1:
 
   after_script:
     - aws s3 cp output s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
+    - aws cloudfront update-distribution --id E3H2ZXM5EJNA8H --default-root-object index.html
   tags:
     - aws
