--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,7 @@ Build - Deploy:
   after_script:
     - aws s3 cp output s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
     - aws cloudfront update-distribution --id E3H2ZXM5EJNA8H --default-root-object $CI_COMMIT_REF_NAME/index.html
-    - curl -H "Authorization: token $GITHUB_TOKEN" -d '{"body":"preview.lean-delivery.com/$CI_COMMIT_REF_NAME"}' -X POST https://api.github.com/repos/lean-delivery/
-      lean-delivery.github.io-src/commits/$CI_COMMIT_SHA/comments
+    - curl -H "Authorization: token $GITHUB_TOKEN" -d '{"body":"preview.lean-delivery.com/$CI_COMMIT_REF_NAME"}' -X POST https://api.github.com/repos/lean-delivery/lean-delivery.github.io-src/commits/$CI_COMMIT_SHA/comments
 
   except:
     - master
