--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ RST Validate:
 Build - Deploy:
   stage: deploy
   before_script:
-    - apt install curl
+    - yum install curl
     - pip install pelican
     - pip install --upgrade awscli
     - sed -i "s,lean-delivery.com,preview.lean-delivery.com/$CI_COMMIT_REF_NAME,g" pelicanconf.py
