--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,9 @@ Build - Deploy:
     - pip install pelican
     - pip install --upgrade awscli
     - sed -i "s,lean-delivery.com,preview.lean-delivery.com/$CI_COMMIT_REF_NAME,g" pelicanconf.py
-    - sed -i "s,/{slug}',/{slug}/index.html',g" pelicanconf.py
+    - sed -i "s,/{slug}\',/{slug}/index.html\',g" pelicanconf.py
     - aws s3 rm s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
-    - curl -H "Authorization:token $GITHUB_TOKEN" -d "{'body':'preview.lean-delivery.com/$CI_COMMIT_REF_NAME'}" -X POST https://api.github.com/repos/lean-delivery/lean-delivery.github.io-src/commits/$CI_COMMIT_SHA/comments
+    - curl -H "Authorization:token $GITHUB_TOKEN" -d '{\"body\":\"preview.lean-delivery.com/$CI_COMMIT_REF_NAME\"}' -X POST https://api.github.com/repos/lean-delivery/lean-delivery.github.io-src/commits/$CI_COMMIT_SHA/comments
   script:
     - pelican
 
