--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ RST Validate:
 Build - Deploy:
   stage: deploy
   variables:
-    body: '{"body":"preview.lean-delivery.com/$CI_COMMIT_REF_NAME"}'
+    body: '{"body":"http://preview.lean-delivery.com/$CI_COMMIT_REF_NAME/index.html"}'
   before_script:
     - apk add --no-cache curl
     - pip install pelican
