--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ RST Validate:
 Build - Deploy:
   stage: deploy
   variables:
-    body: '{"body":"preview_app:%20http://preview.lean-delivery.com/$CI_COMMIT_REF_NAME/index.html\nCD-pipeline:%20https://gitlab.com/lean-delivery/lean-delivery-github-io-src/pipelines/$CI_PIPELINE_ID"}'
+    body: '{"body":"preview_app:&nbsphttp://preview.lean-delivery.com/$CI_COMMIT_REF_NAME/index.html\nCD-pipeline:&nbsphttps://gitlab.com/lean-delivery/lean-delivery-github-io-src/pipelines/$CI_PIPELINE_ID"}'
   before_script:
     - apk add --no-cache curl
     - pip install pelican
