--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,15 +25,15 @@ Build - Deploy:
     - apk add --no-cache curl
     - pip install pelican
     - pip install --upgrade awscli
-    - sed -i "s,https://lean-delivery.com,https://preview.lean-delivery.com/$CI_COMMIT_REF_NAME,g" pelicanconf.py
+    - sed -i "s,https://lean-delivery.com,https://preview.lean-delivery.com/$CI_COMMIT_REF_NAME/$CI_COMMIT_SHA,g" pelicanconf.py
     - sed -i "s,/{slug}\',/{slug}\.html\',g" pelicanconf.py
-    - aws s3 rm s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
+    - aws s3 rm s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/$CI_COMMIT_SHA --recursive
     - curl -H "Authorization:token $GITHUB_TOKEN" -d "$body" -X POST https://api.github.com/repos/lean-delivery/lean-delivery.github.io-src/commits/$CI_COMMIT_SHA/comments
   script:
     - pelican
 
   after_script:
-    - aws s3 cp output s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/ --recursive
+    - aws s3 cp output s3://blog-dev-blog-origin/$CI_COMMIT_REF_NAME/$CI_COMMIT_SHA --recursive
 
   except:
     - master
