--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ Build - Deploy:
     - git config --global user.email "${GITLAB_USER_EMAIL}"
   script:
     - pelican
+    - git submodule deinit --all
     - git submodule init
     - git submodule update
     - cp -a output/. docs/
