--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ Build - Deploy:
     - git submodule init
     - git submodule update
     - cd docs/
-    - git pull origin/master
+    - git pull origin master
     - cp -a ../output/. .
     - git add --all
     - git commit -m "GitLab Runner Push"
